fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 section {
-  margin-bottom: -100px;
+  margin-bottom: 100px;
 }
 
 section img {
